--- a/spain.html
+++ b/spain.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="#">Travel Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="./about.html">About</a>
                     </li>
 
                     <li class="nav-item dropdown">
