--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@ footer {
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Travel Tips</a>
+                        <a class="nav-link" href="./traveltips.html">Travel Tips</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About</a>
