--- a/grece.html
+++ b/grece.html
@@ -37,7 +37,7 @@
 
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Travel Tips</a>
+                        <a class="nav-link" href="./traveltips.html">Travel Tips</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About</a>
