--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Travel Tips</a>
+                <a class="nav-link" href="./traveltips.html">Travel Tips</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./about.html">About</a>
