--- a/isl.html
+++ b/isl.html
@@ -77,7 +77,7 @@
       <hr>
     </section>
         <div class="int-container">
-          <a href="#">
+          <a href="./mauritius.html">
             <div class="img-container int-img trans">
               <img src="./assets/mauritius.jpeg" alt="mauritius">
               <div class="overlap">
@@ -87,7 +87,7 @@
           </a>
           
           
-        <a href="#">
+        <a href="./bali.html">
           <div class="img-container int-img trans">
             <img src="./assets/bali.jpeg" alt="bali">
             <div class="overlap">
@@ -96,7 +96,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./cyprus.html">
           <div class="img-container int-img trans ">
             <img src="./assets/kato.jpeg" alt="">
             <div class="overlap">
@@ -105,7 +105,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./whitsundays.html">
           <div  class="img-container int-img trans">
             <img src="./assets/whitsundays.jpeg" alt="whitsundays">
             <div class="overlap b">
@@ -114,7 +114,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./andaman.html">
           <div  class="img-container int-img trans spl1">
             <img src="./assets/ANDAMAN.webp" alt="">
             <div class="overlap">
@@ -123,7 +123,7 @@
           </div>
         </a>
 
-        <a href="#">
+        <a href="./lakshdweep.html">
           <div  class="img-container int-img trans spl1">
             <img src="./assets/lakshdp.jpg" alt="">
             <div class="overlap">
