--- a/about.html
+++ b/about.html
@@ -137,11 +137,16 @@ footer {
             <p>ABC Travels was born out of a shared passion for exploration and adventure. The founders, Sarah, Michael, and David, met while backpacking through Southeast Asia and bonded over their love for travel. Frustrated by the lack of personalized and reliable travel services available online, they envisioned a platform that would cater to the diverse needs of modern travelers.</p>
         </section>
     </main>
-
-    <footer>
-      
-        <p>&copy; 2024 ABC Travels. All rights reserved.</p>
-    </footer>
+    <section>
+        <footer class="py-5 my-5">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Travel Tips</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Packages</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+          </ul>
+          <p class="text-center text-body-secondary">© 2024 ABC TRAVELS</p></footer>
+      </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
