--- a/traveltips.html
+++ b/traveltips.html
@@ -46,8 +46,8 @@ ul li {
 }
 
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: rgba(0,0, 0, 0.4);
+    color:white;
     text-align: center;
     padding: 10px;
 }
@@ -183,9 +183,16 @@ footer {
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Travel Tips and Resources. All rights reserved.</p>
-    </footer>
+    <section>
+        <footer class="py-5 my-5">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Travel Tips</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Packages</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+          </ul>
+          <p class="text-center text-body-secondary">© 2024 ABC TRAVELS</p></footer>
+      </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
